arreglar temporizador , mejorar estructura

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
   <div class="container text-center mt-5">
 
     <h1 class="d-flex justify-content-center text-white">Carta Aleatoria</h1>
-    
     <div class="card mx-auto p-3 mt-3">
       <p class="logo superior">Logo superior</p>
       <p class="numero">8</p>
       <p class="logo inferior">Logo inferior</p>
-    </div>
+    </div> <br>
+    <p>Se actualiza cada <strong class="text-white">10s</strong> o puedes <strong class="text-white">barajar</strong>:</p>
 
     <button class="btn btn-light mt-3" id="generate-btn">Barajar</button>
 
